# surfacetension

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: run_sim.py
src/surfacetension/: __init__.py  n_comp_sim.py  post_proc.py
tests/: test_n_comp_sim.py
